libaio (0.3.112-8) UNRELEASED; urgency=medium

  * Add a comment with the reason for each architecture being in the flaky
    test suite mode.

 -- Guillem Jover <guillem@debian.org>  Mon, 13 Apr 2020 02:22:03 +0200

libaio (0.3.112-7) unstable; urgency=medium

  * Cleanup patches:
    - Move upstream patches under debian/patches/upstream/.
    - Fix syscall definitions for ARM and ia64 to match the kernel exactly.
      Otherwise the preprocessor emits warnings about redefinitions.
    - Split the architecture support patches into one per arch support.
    - Fix syscall definitions for hppa to match the kernel exactly.
    - Make __X32_SYSCALL_BIT an unsigned long constant to match the kernel.
    - Fix x32 structures padding.
    - Rework build system patches to ready them for upstream submission,
      and drop libdevdir support which we do not use anymore.
  * Fix logic inversion in test suite flaky handling.
  * Remove trailing closing parenthesis from TESTS_RUN conditional.
  * Print a message when we run the test suite in flaky mode.
  * Remove armhf from the test suite flaky mode.

 -- Guillem Jover <guillem@debian.org>  Sun, 12 Apr 2020 04:49:39 +0200

libaio (0.3.112-6) unstable; urgency=medium

  * Sync with upstream commits:
    - Rebase against latest upstream git master.
    - Skip the test if io_pgetevents() is not implemented.
  * Switch to Standards-Version 4.5.0 (no changes needed).
  * Do not pass --add-udeb to dh_makeshlibs anymore, it's autodetected since
    debhelper 12.3, for which we add an explicit versioned Build-Depends.
  * Use correct syscall numbers for x32 port.
  * Make the testsuite fatal on architectures known to pass it, to avoid
    future regressions.
  * Temporarily force a flaky test suite run on architectures built under
    and emulator, to get test results.

 -- Guillem Jover <guillem@debian.org>  Sat, 11 Apr 2020 19:06:49 +0200

libaio (0.3.112-5) unstable; urgency=medium

  * Sync with upstream commits: